// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button Test should render the radio button 1`] = `
.c2 {
  width: 18px;
  height: 18px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  width: 8px;
  height: 8px;
  border-radius: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-flexDirection-18u37iz r-justifyContent-1777fci r-touchAction-1otgn73"
  data-focusable={true}
  disabled={false}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="radio"
  tabIndex="0"
>
  <div
    className="c1 c2 c1 c2 css-view-1dbjc4n"
    disabled={false}
  >
    <div
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
      disabled={false}
    />
  </div>
</div>
`;

exports[`Radio Button Test should render the radio button disabled checked false 1`] = `
.c2 {
  width: 18px;
  height: 18px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  width: 8px;
  height: 8px;
  border-radius: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

.c4:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

.c5:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-flexDirection-18u37iz r-justifyContent-1777fci r-touchAction-1otgn73"
  data-focusable={true}
  disabled={false}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="radio"
  tabIndex="0"
>
  <div
    className="c1 c2 c1 c2 css-view-1dbjc4n"
    disabled={false}
  >
    <div
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
      disabled={false}
    />
  </div>
</div>
`;

exports[`Radio Button Test should render the radio button disabled checked true 1`] = `
.c2 {
  width: 18px;
  height: 18px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  width: 8px;
  height: 8px;
  border-radius: 100%;
  background-color: #161616;
}

.c4:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

.c5:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-flexDirection-18u37iz r-justifyContent-1777fci r-touchAction-1otgn73"
  data-focusable={true}
  disabled={false}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="radio"
  tabIndex="0"
>
  <div
    className="c1 c2 c1 c2 css-view-1dbjc4n"
    disabled={false}
  >
    <div
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
      disabled={false}
    />
  </div>
</div>
`;

exports[`Radio Button Test should render the radio button disabled false 1`] = `
.c2 {
  width: 18px;
  height: 18px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  width: 8px;
  height: 8px;
  border-radius: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

.c4:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-flexDirection-18u37iz r-justifyContent-1777fci r-touchAction-1otgn73"
  data-focusable={true}
  disabled={false}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="radio"
  tabIndex="0"
>
  <div
    className="c1 c2 c1 c2 css-view-1dbjc4n"
    disabled={false}
  >
    <div
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
      disabled={false}
    />
  </div>
</div>
`;

exports[`Radio Button Test should render the radio button disabled true 1`] = `
.c2 {
  width: 18px;
  height: 18px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: #e0e0e0;
}

.c3 {
  width: 8px;
  height: 8px;
  border-radius: 100%;
}

.c4:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.c0:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  aria-disabled={true}
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
  disabled={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="radio"
>
  <div
    aria-disabled={true}
    className="c1 c2 c1 c2 css-view-1dbjc4n"
    disabled={true}
  >
    <div
      aria-disabled={true}
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
      disabled={true}
    />
  </div>
</div>
`;

exports[`Radio Button Test should render the radio button with children 1`] = `
.c2 {
  width: 18px;
  height: 18px;
  border: 2px solid;
  border-color: #161616;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  width: 8px;
  height: 8px;
  border-radius: 100%;
}

.c4 {
  margin-left: 8px;
  color: #161616;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

.c5:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

.c6:focus .c1 {
  border-color: #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
  box-shadow: 0px 0px 0px 1px #0043CE;
}

<div
  className="c0 sc-hKFyIo c0 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-flexDirection-18u37iz r-justifyContent-1777fci r-touchAction-1otgn73"
  data-focusable={true}
  disabled={false}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="radio"
  tabIndex="0"
>
  <div
    className="c1 c2 c1 c2 css-view-1dbjc4n"
    disabled={false}
  >
    <div
      className="c3 sc-gtssRu c3 css-view-1dbjc4n"
      disabled={false}
    />
  </div>
  <div
    className="c4 sc-dlnjPT c4 css-text-901oao"
    dir="auto"
    disabled={false}
  >
    Hello world
  </div>
</div>
`;
